--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,8 +16,7 @@
 title: Trump Charts
 description: >- # this means to ignore newlines until "baseurl:"
   Charts and analysis of Donald Trump's tweets.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/Hackkings" # the subpath of your site, e.g. /blog
 github_username:  RajatRasal
 
 # Build settings
